--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,18 +11,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
-
-
+  http: ^1.2.2
   cupertino_icons: ^1.0.8
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
-
+  assets:
+    - assets/icons/
 
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"
