--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,10 +11,16 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localProperties.load(new FileInputStream(localPropertiesFile))
+}
+
 android {
     namespace = "com.esfot.flutter_api"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    compileSdk = localProperties.getProperty('flutter.compileSdkVersion').toInteger()
+    ndkVersion = "21.3.6528147"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -22,18 +28,15 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8"
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.esfot.flutter_api"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdk = localProperties.getProperty('flutter.minSdkVersion').toInteger()
+        targetSdk = localProperties.getProperty('flutter.targetSdkVersion').toInteger()
+        versionCode = localProperties.getProperty('flutter.versionCode').toInteger()
+        versionName = localProperties.getProperty('flutter.versionName')
     }
 
     signingConfigs {
@@ -47,7 +50,6 @@ android {
 
     buildTypes {
         release {
-            // Use the release signing config
             signingConfig signingConfigs.release
             minifyEnabled false
             shrinkResources false
